syntax = "proto3";

package mlflow_probs;

message PredictionList {
  repeated float values = 1;
}

message MlflowProbs {
  repeated PredictionList pred = 1;
  int32 batch_index = 2;
  string client_id = 3;
}


